--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ gradio_client==1.4.3
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
-huggingface-hub==0.24.5
+huggingface-hub>=0.25.1
 humanfriendly==10.0
 icecream==2.1.3
 idna==3.4
